# ComfyUI-FLUX2-API-Nodes

./: README.md  pyproject.toml
nodes/: base.py  config.py  config_node.py  flux2flex.py  flux2klein4b.py  flux2klein9b_kv.py  flux2klein_direct.py  flux2max_direct.py  flux2pro.py  flux2pro_preview.py
tests/: test_node_registration.py
