[project]
name = "comfyui-flux2-api-nodes"
description = "ComfyUI V3 nodes for all FLUX.2 models via the BFL API — direct IMAGE inputs, async polling, progress bars."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "aiohttp"]

[project.urls]
Repository = "https://github.com/olliethomas1992/ComfyUI-FLUX2-API-Nodes"
